crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier1__stitch__auto-stitch-v2.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier1/stitch/auto-stitch-v2
oracle: 2, brink: 2, matched: 2
passing: 2/2

=== episode [0] === PASS
> "I settled my master.\n" [Choices: "Move to third class" (0), "Are you sure" (1) -> 0]
> "I put myself in third.\n" [Ended]
outcome: Ended

=== episode [1, 0] === PASS
> "I settled my master.\n" [Choices: "Move to third class" (0), "Are you sure" (1) -> 1]
> "I settled my master.\n" [Choices: "Move to third class" (0) -> 0]
> "I put myself in third.\n" [Ended]
outcome: Ended
